--- a/src/_includes/partials/global/site-foot.njk
+++ b/src/_includes/partials/global/site-foot.njk
@@ -1,52 +1,46 @@
 <footer role="contentinfo" class="[ site-foot ] [ pad-top-700 pad-bottom-700 ]">
   <div class="wrapper">
     <div class="[ site-foot__inner ] [ md:box-flex space-between align-start ]">
-      {% if site.shortDesc %}
         <article class="[ site-foot__details ]">
 			<a href="/" class="site-foot__logo">
 				<svg class="site-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44.3 68.2"><path d="M1.6 54.9c-1.1-.8-1.6-2-1.6-3.6 0-3.2 2.7-5.7 8.2-7.4l5.4-25.2h7.2l-4.9 23.2c1.6-.5 2.9-1.3 3.8-2.4 1-1.1 1.8-2.6 2.5-4.8h2.1c-.9 3-2.1 5.1-3.6 6.5-1.5 1.4-3.3 2.3-5.2 2.8l-.8 3.6c-.7 3.2-1.8 5.5-3.5 6.7s-3.5 1.8-5.5 1.8c-1.7.1-3-.3-4.1-1.2zm4.5-3.8c.5-.8 1-1.9 1.2-3.3l.3-1.4c-3.3 1.2-4.9 2.6-4.9 4.2 0 .4.1.8.5 1.1.3.3.7.5 1.2.5.6.1 1.2-.3 1.7-1.1zm9.1-36.3c-.8-.8-1.1-1.7-1.1-2.8 0-1.1.4-2 1.1-2.8C16 8.4 16.9 8 18 8c1.1 0 2 .4 2.8 1.2.9.8 1.2 1.7 1.2 2.8 0 1.1-.4 2-1.2 2.8-.8.8-1.7 1.1-2.8 1.1-1.1 0-2-.3-2.8-1.1z"/><path d="M23.5 42.3c-1.2-1.1-1.8-2.7-1.8-4.7 0-1 .1-1.9.4-2.9l5.4-25 7.4-1-2.4 11.2c.9-.6 1.7-.9 2.3-1.1.6-.2 1.2-.3 1.8-.3 3.9 0 5.9 2.9 5.9 8.5 0 2.3-.4 4.8-1.3 7.4-.9 2.6-2.4 4.9-4.4 6.7-2 1.9-4.7 2.8-8 2.8-2.3.1-4.1-.5-5.3-1.6zm10.9-5.1c.9-1.3 1.6-2.9 2.1-4.8s.8-3.8.8-5.5c0-1.3-.2-2.5-.7-3.4-.5-.9-1.1-1.4-2-1.4-.5 0-1.1.1-1.7.2-.6.1-1 .4-1.3.7L29 35.7c-.1.4-.2.8-.2 1.1 0 1.5.9 2.3 2.7 2.3 1.1 0 2-.6 2.9-1.9z"/></svg>
 				<span class="visually-hidden">James Bateson logo</span>
 			</a>
 
-			<a href="https://codepen.io/jim-bateson" class="site-foot__icon" rel="external">
-		  		<svg viewBox="-1 0 122 120" xmlns="http://www.w3.org/2000/svg">
-					<path class="outer-ring" d="M60,0C26.863,0,0,26.863,0,60c0,33.138,26.863,60,60,60c33.137,0,60-26.861,60-60C120,26.863,93.138,0,60,0z M60,110.146
-							C32.35,110.146,9.854,87.65,9.854,60S32.35,9.854,60,9.854c27.65,0,50.145,22.496,50.145,50.146S87.65,110.146,60,110.146z"/>
-					<path d="M97.071,48.281c-0.007-0.047-0.019-0.092-0.026-0.139c-0.016-0.09-0.032-0.18-0.056-0.267
-							c-0.014-0.053-0.033-0.104-0.05-0.154c-0.025-0.078-0.051-0.156-0.082-0.232c-0.021-0.053-0.047-0.105-0.071-0.156
-							c-0.033-0.072-0.068-0.142-0.108-0.21c-0.029-0.051-0.061-0.1-0.091-0.148c-0.043-0.066-0.087-0.131-0.135-0.193
-							c-0.035-0.047-0.072-0.093-0.109-0.138c-0.051-0.059-0.104-0.117-0.159-0.172c-0.042-0.043-0.083-0.086-0.127-0.125
-							c-0.059-0.053-0.119-0.104-0.18-0.152c-0.048-0.037-0.095-0.074-0.145-0.109c-0.019-0.012-0.035-0.027-0.053-0.039L61.769,23.438
-							c-1.071-0.714-2.466-0.714-3.537,0L24.321,46.045c-0.018,0.012-0.034,0.027-0.053,0.039c-0.05,0.035-0.097,0.072-0.144,0.109
-							c-0.062,0.049-0.123,0.1-0.181,0.152c-0.045,0.039-0.086,0.082-0.128,0.125c-0.055,0.055-0.108,0.113-0.158,0.172
-							c-0.038,0.045-0.075,0.091-0.11,0.138c-0.047,0.062-0.092,0.127-0.134,0.193c-0.032,0.049-0.062,0.098-0.092,0.148
-							c-0.039,0.068-0.074,0.139-0.108,0.21c-0.024,0.051-0.049,0.104-0.071,0.156c-0.031,0.076-0.057,0.154-0.082,0.232
-							c-0.017,0.051-0.035,0.102-0.05,0.154c-0.023,0.087-0.039,0.177-0.056,0.267c-0.008,0.047-0.02,0.092-0.025,0.139
-							c-0.019,0.137-0.029,0.275-0.029,0.416v22.607c0,0.141,0.011,0.279,0.029,0.418c0.006,0.045,0.018,0.092,0.025,0.137
-							c0.017,0.09,0.032,0.18,0.056,0.268c0.015,0.053,0.033,0.104,0.05,0.154c0.025,0.078,0.051,0.155,0.082,0.233
-							c0.021,0.053,0.047,0.104,0.071,0.154c0.034,0.072,0.069,0.143,0.108,0.213c0.029,0.049,0.06,0.098,0.092,0.146
-							c0.042,0.066,0.087,0.131,0.134,0.193c0.035,0.049,0.072,0.094,0.11,0.139c0.05,0.059,0.103,0.117,0.158,0.172
-							c0.042,0.043,0.083,0.086,0.128,0.124c0.058,0.053,0.118,0.104,0.181,0.152c0.047,0.037,0.094,0.074,0.144,0.109
-							c0.019,0.012,0.035,0.027,0.053,0.039l33.911,22.607c0.536,0.357,1.152,0.537,1.769,0.537c0.616,0,1.233-0.18,1.768-0.537
-							L95.68,73.956c0.018-0.012,0.034-0.027,0.053-0.039c0.05-0.035,0.097-0.072,0.145-0.109c0.061-0.049,0.121-0.1,0.18-0.152
-							c0.044-0.038,0.085-0.081,0.127-0.124c0.056-0.055,0.108-0.113,0.159-0.172c0.037-0.045,0.074-0.09,0.109-0.139
-							c0.048-0.062,0.092-0.127,0.135-0.193c0.03-0.049,0.062-0.098,0.091-0.146c0.04-0.07,0.075-0.141,0.108-0.213
-							c0.024-0.051,0.05-0.102,0.071-0.154c0.031-0.078,0.057-0.155,0.082-0.233c0.017-0.051,0.036-0.102,0.05-0.154
-							c0.023-0.088,0.04-0.178,0.056-0.268c0.008-0.045,0.02-0.092,0.026-0.137c0.018-0.139,0.028-0.277,0.028-0.418V48.697
-							C97.1,48.557,97.089,48.418,97.071,48.281z M63.188,32.048L88.17,48.701l-11.158,7.465l-13.823-9.247V32.048z M56.812,32.048
-							v14.871l-13.822,9.247l-11.159-7.465L56.812,32.048z M29.278,54.665L37.255,60l-7.977,5.335V54.665z M56.812,87.953L31.831,71.3
-							l11.159-7.463l13.822,9.245V87.953z M60,67.543L48.723,60L60,52.458L71.276,60L60,67.543z M63.188,87.953V73.082l13.823-9.245
-							L88.17,71.3L63.188,87.953z M90.723,65.336L82.746,60l7.977-5.335V65.336z"/>
-				</svg>
-				<span class="visually-hidden">James Bateson Codepen profile</span>
-			</a>
+			<ul class="site-foot__social">
+				<li>
+					<a href="https://codepen.io/jim-bateson" class="site-foot__icon" target="_blank" rel="noreferrer">
+						<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+							<path d="M502.285 159.704l-234-156c-7.987-4.915-16.511-4.96-24.571 0l-234 156C3.714 163.703 0 170.847 0 177.989v155.999c0 7.143 3.714 14.286 9.715 18.286l234 156.022c7.987 4.915 16.511 4.96 24.571 0l234-156.022c6-3.999 9.715-11.143 9.715-18.286V177.989c-.001-7.142-3.715-14.286-9.716-18.285zM278 63.131l172.286 114.858-76.857 51.429L278 165.703V63.131zm-44 0v102.572l-95.429 63.715-76.857-51.429L234 63.131zM44 219.132l55.143 36.857L44 292.846v-73.714zm190 229.715L61.714 333.989l76.857-51.429L234 346.275v102.572zm22-140.858l-77.715-52 77.715-52 77.715 52-77.715 52zm22 140.858V346.275l95.429-63.715 76.857 51.429L278 448.847zm190-156.001l-55.143-36.857L468 219.132v73.714z"></path>
+						</svg>
+						<span class="visually-hidden">James Bateson Codepen profile</span>
+					</a>
+				</li>
+
+				<li>
+					<a href="https://github.com/jimbateson" class="site-foot__icon" target="_blank" rel="noreferrer">
+						<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+							<path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path>
+						</svg>
+						<span class="visually-hidden">James Bateson Github profile</span>
+					</a>
+				</li>
+
+				<li>
+					<a href="https://twitter.com/jim_bateson" class="site-foot__icon" target="_blank" rel="noreferrer">
+						<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+							<path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path>
+						</svg>
+						<span class="visually-hidden">James Bateson Twitter profile</span>
+					</a>
+				</li>
+			</ul>
         </article>
-      {% endif %}
       {# {% include "partials/components/nav.njk" %} #}
     </div>
     {% if site.showThemeCredit %}
       <p class="[ site-foot__credit ] [ pad-top-900 ]">
-	  	Built with <a href="https://www.11ty.io/" target="_blank" rel="noreferrer">Eleventy</a> and <a href="https://hylia.website/" target="_blank" rel="noreferrer">Hylia</a>. Hosted on <a href="https://www.netlify.com/" target="_blank" rel="noreferrer">Netlify</a>.
+	  	Built with <a href="https://www.11ty.io/" target="_blank" rel="noreferrer">Eleventy</a> &bull; Hosted on <a href="https://www.netlify.com/" target="_blank" rel="noreferrer">Netlify</a> &bull; <a href="/styleguide/">Style Guide</a>.
       </p>
     {% endif %}
   </div>
