--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,18 +7,15 @@
 
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}/feed.xml" />
 
-	<link rel="icon" href="/images/favicons/favicon.svg" type="image/svg+xml">
-	<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
-	<link rel="manifest" href="/images/favicons/site.webmanifest">
-	<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#8017ba">
-	<link rel="shortcut icon" href="/images/favicons/favicon.ico">
-	<meta name="msapplication-TileColor" content="#8017ba">
-	<meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
-	<meta name="theme-color" content="#8017ba">
+	<meta name="theme-color" content="#4b87bd">
+	<link rel="icon" href="/images/favicons/favicon.svg">
+	<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#4b87bd">
+	<link rel="apple-touch-icon" href="/images/favicons/apple-touch-icon.png">
+	<link rel="manifest" href="images/favicons/manifest.json">
 
-	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter.woff2" crossorigin/>
+	<link rel="preload" as="font" type="font/woff2" href="/fonts/sutro/sutro-bold.woff2" crossorigin/> 
+	<link rel="preload" as="font" type="font/woff2" href="/fonts/skolar-sans/skolar-sans-regular.woff2" crossorigin/>
+	<link rel="preload" as="font" type="font/woff2" href="/fonts/skolar-sans/skolar-sans-bold.woff2" crossorigin/>
 
 	{% include "partials/global/meta-info.njk" %}
 	<style>{% include "assets/css/global.css" %}</style>
@@ -26,7 +23,8 @@
 	{% block head %}
 	{% endblock %}
 </head>
-<body>
+{# TODO a nicer way of doing this light nav #}
+<body class="{% if page.url == '/project/isveggiemanhere/' %}light-nav{% endif %}">
 	{% include "partials/global/site-head.njk" %}
 	{% block content %}
 	{% endblock content %}
