--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -9,6 +9,7 @@
 
 {# Post list content #}
 {% set postListHeading = postsHeading %}
+{% set postListSummary = postsSummary %}
 {% set postListItems = collections.postFeed %}
 
 {# Post list content #}
@@ -26,7 +27,6 @@
 {% block content %}
   <main id="main-content" tabindex="-1">
     {% include "partials/components/intro.njk" %}
-	  {% include "partials/components/about.njk" %}
     {% include "partials/components/article-list.njk" %}
     {% include "partials/components/people-list.njk" %}
     {% include "partials/components/project-list.njk" %}
