--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -3,12 +3,15 @@
 
 {# Intro content #}
 {% set introHeading = title %}
+{% set introSummary = bannerSummary %}
+{% set introImage = bannerImage %}
+{% set introImageClass = bannerImageClass %}
 
 {% block content %}
   <main id="main-content" tabindex="-1">
     <article class="[ post ] [ h-entry ]">
       {% include "partials/components/intro.njk" %}
-      <div class="[ post__body ] [ inner-wrapper ] [ pad-top-900 pad-bottom-900 text-500 ] [ sf-flow ] [ e-content ]">
+      <div class="[ post__body ] [ inner-wrapper ] [ pad-top-600 pad-bottom-max text-500 ] [ sf-flow ] [ e-content ]">
         {{ content | safe }}
       </div>
     </article>
