--- a/src/_includes/partials/components/article-list.njk
+++ b/src/_includes/partials/components/article-list.njk
@@ -1,9 +1,9 @@
 {% if postListItems.length %}
-  <section class="[ post-list ] [ pad-top-900 pad-bottom-max ]">
+  <section class="[ post-list ] [ pad-top-600 pad-bottom-max ]">
     <div class="[ wrapper ] [ sf-flow ]">
       <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">{{ postListHeading }}</h2>
-	  <p class="section-intro">Development related thoughts I have recently turned to words</p>
-      <ol class="[ post-list__items ] [ sf-flow ] [ pad-top-800 ]" reversed>
+	    <p class="section-intro">{{ postListSummary }}</p>
+      <ol class="[ post-list__items ] [ sf-flow ] [ pad-top-500 ]" reversed>
         {% for item in postListItems %}
           <li class="post-list__item">
             <h3 class="font-base leading-tight text-600">
