--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -14,11 +14,11 @@
     --color-action-text: #{get-color('light')};
     --color-theme-primary: #{get-color('primary')};
     --color-theme-primary-glare: #{get-color('primary-glare')};
-    --color-theme-highlight: #{get-color('highlight')};
 
-    --color-light: rgb(255, 255, 255);
-    --color-grey-light: #f6f9fc;
-    --color-accent: rgb(50, 50, 93);
+    --color-light: #{get-color('light')};
+    --color-grey-light: #{get-color('grey-light')};
+    --color-grey-med: #e9e9e9;
+    --color-accent: #{get-color('accent')};
 }
 
 body {
