style: some spacing tweaks on mobile and stacked project lists on mobile
Fixes #168

--- a/src/_includes/partials/components/intro.njk
+++ b/src/_includes/partials/components/intro.njk
@@ -1,4 +1,4 @@
-<header class="[ intro {% if introImage %} intro__flex {% endif %} ] [ pad-top-max pad-bottom-max ]">
+<header class="[ intro {% if introImage %} intro__flex {% endif %} ] [ pad-top-700 pad-bottom-max md:pad-top-max ]">
   <div class="[ wrapper ] [ {% if introImage %} sf-flow {% endif %}  ]">
     <div class="[ sf-flow ]">
       <h1 class="[ intro__heading ] [ text-800 md:text-max leading-tight ] [ p-name ]">{{ introHeading }}</h1>
