--- a/src/_includes/partials/components/people-list.njk
+++ b/src/_includes/partials/components/people-list.njk
@@ -1,5 +1,5 @@
 
-<section class="[ people-list ] [ pad-top-600 pad-bottom-max ]">
+<section class="[ people-list ] [ pad-top-500 pad-bottom-500 md:pad-top-600 md:pad-bottom-max ]">
 	<div class="[ wrapper ] [ sf-flow ]">
 		<h2 class="[ people-list__heading ] [ text-700 md:text-900 ]">Inspiring Folks</h2>
 		<p class="section-intro">A few people who I work/have worked with that inspire me and have helped me grow as a developer &ndash; thank you!</p>
