--- a/src/_includes/partials/components/journal-list.njk
+++ b/src/_includes/partials/components/journal-list.njk
@@ -1,5 +1,5 @@
 {% if journalListItems.length %}
-  <section class="[ post-list ] [ pad-top-600 pad-bottom-max ]">
+  <section class="[ post-list ] [ pad-top-500 pad-bottom-500 md:pad-top-600 md:pad-bottom-max ]">
     <div class="[ wrapper ] [ sf-flow ]">
       <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">{{ postListHeading }}</h2>
       <ol class="[ post-list__items ] [ sf-flow ] [ pad-top-500 ]" reversed>
