--- a/src/scss/components/_project-list.scss
+++ b/src/scss/components/_project-list.scss
@@ -1,7 +1,6 @@
 .project-list__items {
     display: grid;
     gap: var(--flow-space);
-    grid-template-columns: repeat(2, 1fr);
 }
 
 .project-list__item {
@@ -23,6 +22,55 @@
     }
 }
 
+.project-list__item {
+    > a {
+        display: block;
+        overflow: hidden;
+        position: relative;
+
+        &:before {
+            content: '';
+            background-color: rgba(12, 12, 12, .1);
+            display: block;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            z-index: 1;
+        }
+    }
+
+    img  {
+        display: block;
+    }
+}
+
+.project-list__content {
+    box-sizing: border-box;
+    color: var(--color-light);
+    left: 0;
+    bottom: 65px;
+    right: 0;
+    margin: 0;
+    padding: 0 30px;
+    position: absolute;
+    width: 100%;
+    z-index: 2;
+
+    p {
+        display: none
+    }
+
+    span {
+        color: var(--color-light);
+        justify-self: flex-start;
+        position: absolute;
+        left: 30px;
+        top: 100%;
+    }
+}
+
 @media screen and (max-width: map-get($metrics, 'md-breakpoint')) {
     .project-single {
         .intro {
@@ -41,25 +89,24 @@
     }
 }
 
+@include media-query('md') {
+    .project-list__items {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .project-list__content {
+        p {
+            display: block;
+        }
+    }
+}
+
 @media screen and (min-width: 1280px) {
     .project-list__item {
         box-shadow: 3px 3px 0 rgba(0, 0, 0, .1);
         
         > a {
-            display: block;
-            position: relative;
-            overflow: hidden;
-
             &:before {
-                content: "";
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 110%;
-                background-color: rgba(12, 12, 12, .1);
-                z-index: 1;
                 opacity: 0;
                 transition: opacity .3s cubic-bezier(.75, 0, .5, 1);
             }
@@ -72,10 +119,6 @@
                 opacity: 1;
                 transition-timing-function: cubic-bezier(.25,0,.125,1);
             }
-        }
-
-        img {
-            display: block;
         }
 
         .project-list__content {
@@ -93,18 +136,8 @@
     }
 
     .project-list__content {
-        box-sizing: border-box;
-        color: var(--color-light);
-        display: grid;
-        left: 0;
         bottom: 40px;
-        right: 0;
-        margin: 0;
-        padding: 0 30px;
-        position: absolute;
         transition: transform .3s cubic-bezier(.645,.045,.355,1), -webkit-transform .3s cubic-bezier(.645, .045, .355, 1);
-        width: 100%;
-        z-index: 2;
 
         h3 {
             font-size: get-size(700);
@@ -115,13 +148,8 @@
         }
 
         span {
-            color: var(--color-light);
-            justify-self: flex-start;
             opacity: 0;
             transition: opacity .35s, transform .35s;
-            position: absolute;
-            left: 30px;
-            top: 100%;
             transition: visibility 0s linear .2s,opacity .2s cubic-bezier(.365,.005,.355,1);
             visibility: hidden;
             will-change: opacity;
