style: some more spacing tweaks
I NEED TO STOP

--- a/src/scss/components/_site-head.scss
+++ b/src/scss/components/_site-head.scss
@@ -9,6 +9,13 @@
     }
 }
 
+.site-head {
+    .nav {
+        position: sticky;
+        top: 0;
+    }
+}
+
 @include media-query('md') {
     .site-head {
         overflow: hidden;
