style: subtle background for intro component
Not on project page due to image. Hopefully make things look a little bit less spacey in places

--- a/src/scss/components/_project-list.scss
+++ b/src/scss/components/_project-list.scss
@@ -74,6 +74,12 @@
     }
 }
 
+.project-single {
+    .intro {
+        background-color: transparent;
+    }
+}
+
 @media screen and (max-width: map-get($metrics, 'md-breakpoint')) {
     .project-single {
         .intro {
