--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -1,4 +1,5 @@
 .intro {
+    background-color: #f0f4fb;
     color: var(--color-dark);
 
     &__heading {
@@ -81,6 +82,8 @@
 
 @media screen and (max-width: map-get($metrics, 'md-breakpoint')) {
     .intro {
+        margin-top: 20px;
+
         &__image {
             &--angled {
                 margin-left: 50%;
