style: some overflow scroll spacing and added a subtle intro background color
Still undecided on the colour!

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -63,6 +63,10 @@
         &.hide-mobile {
             display: none;
         }
+
+        &:not(.nav__item--tag) {
+            padding-bottom: 20px;
+        }
     }
 }
 
