style: overflow scrolllbar space and intro background (#193)
* chore: package-lock update

* chore: remove logo from footer

* style: some more spacing tweaks

I NEED TO STOP

* chore: remove CSS sticky nav for now

I think this will be useful, but need to re-think its implementation!

* style: increase navigation font-size on mobile

Was failing tap target lighthouse

* chore: some image optimisation

* chore: manual bump of package-lock dependancy

* build: added requirements file for subfont plugin usage

* chore: some font loading strategy changes

* build: updated netlify config with font loading option

* build: netlify config tweaks

* build: set netlify font loading plugin to inline css

* style: project listing images aspect-ratio

Fixes #182

* style: subtle background for intro component

Not on project page due to image. Hopefully make things look a little bit less spacey in places

* style: still show intro background on project page at smaller resolutions

* style: some overflow scroll spacing and added a subtle intro background color

Still undecided on the colour!

Co-authored-by: James Bateson <james@fatmedia.co.uk>

--- a/src/scss/components/_project-list.scss
+++ b/src/scss/components/_project-list.scss
@@ -161,6 +161,12 @@
 }
 
 @media screen and (min-width: 1440px) {
+    .project-single {
+        .intro {
+            background-color: transparent;
+        }
+    }
+    
     .project-single__body {
         padding-right: 9.5rem;
     }
