style: couple of fussy style tweaks

--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -1,6 +1,7 @@
 .intro {
     background-color: #f0f4fb;
     color: var(--color-dark);
+    margin-bottom: 1.5rem;
 
     &__heading {
         @include apply-utility('font', 'heading');
