--- a/src/scss/components/_project-list.scss
+++ b/src/scss/components/_project-list.scss
@@ -168,6 +168,8 @@
     }
     
     .project-single__body {
-        padding-right: 9.5rem;
+        > *:not(pre) {
+            padding-right: 9.5rem;
+        }
     }
 }
