chore: add font pre-loading back in for fonts visible on load

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -13,6 +13,10 @@
 	<link rel="apple-touch-icon" href="/images/favicons/apple-touch-icon.png">
 	<link rel="manifest" href="images/favicons/manifest.json">
 
+	<link rel="preload" as="font" type="font/woff2" href="/fonts/sutro/sutro-bold.woff2" crossorigin/> 
+	<link rel="preload" as="font" type="font/woff2" href="/fonts/skolar-sans/skolar-sans-regular.woff2" crossorigin/>
+	<link rel="preload" as="font" type="font/woff2" href="/fonts/skolar-sans/skolar-sans-bold.woff2" crossorigin/>
+
 	{% include "partials/global/meta-info.njk" %}
 	<style>{% include "assets/css/global.css" %}</style>
 
