--- a/src/_includes/partials/components/walks-list.njk
+++ b/src/_includes/partials/components/walks-list.njk
@@ -1,4 +1,4 @@
-{% if postListItems.length %}
+{# {% if postListItems.length %}
   <section class="[ post-list ] [ pad-top-700 pad-bottom-700 md:pad-top-600 md:pad-bottom-max ]">
     <div class="[ wrapper ] [ sf-flow ]">
       <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">{{ postListHeading }}</h2>
@@ -17,4 +17,4 @@
       </ol>
     </div>
   </section>
-{% endif %}
+{% endif %} #}
