--- a/src/_includes/partials/global/meta-info.njk
+++ b/src/_includes/partials/global/meta-info.njk
@@ -11,7 +11,7 @@
   {% set pageDesc = metaDesc %}
 {% endif %}
 
-<title>{{ pageTitle }}</title>
+<title>Walks | James Bateson</title>
 
 <meta property="og:site_name" content="{{ siteTitle }}" />
 <meta property="og:title" content="{{ pageTitle }}" />
