--- a/src/feed.njk
+++ b/src/feed.njk
@@ -1,4 +1,4 @@
----
+{# ---
 permalink: '/feed.xml'
 ---
 <?xml version="1.0" encoding="utf-8"?>
@@ -25,4 +25,4 @@ permalink: '/feed.xml'
     ]]></content>
   </entry>
 	{% endfor %}
-</feed>
+</feed> #}
