--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -13,11 +13,7 @@
 	<link rel="apple-touch-icon" href="/images/favicons/apple-touch-icon.png">
 	<link rel="manifest" href="images/favicons/manifest.json">
 
-	<link rel="preload" as="font" type="font/woff2" href="/fonts/sutro/sutro-med.woff2" crossorigin/> 
-	<link rel="preload" as="font" type="font/woff2" href="/fonts/sutro/sutro-bold.woff2" crossorigin/>
-	<link rel="preload" as="font" type="font/woff2" href="/fonts/skolar-sans/skolar-sans-regular.woff2" crossorigin/>
-	<link rel="preload" as="font" type="font/woff2" href="/fonts/skolar-sans/skolar-sans-semi.woff2" crossorigin/>
-	<link rel="preload" as="font" type="font/woff2" href="/fonts/skolar-sans/skolar-sans-bold.woff2" crossorigin/>
+	<link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet"> 
 
 	{% include "partials/global/meta-info.njk" %}
 	<style>{% include "assets/css/global.css" %}</style>
@@ -25,14 +21,14 @@
 	{% block head %}
 	{% endblock %}
 </head>
-{# TODO a nicer way of doing this light nav #}
-<body class="{% if page.url == '/project/isveggiemanhere/' %}light-nav{% endif %}">
-	{% include "partials/global/site-head.njk" %}
+
+<body>
+	{# {% include "partials/global/site-head.njk" %} #}
 	{% block content %}
 	{% endblock content %}
-	{% include "partials/global/site-foot.njk" %}
+	{# {% include "partials/global/site-foot.njk" %}
 	{% block foot %}
-	{% endblock %}
+	{% endblock %} #}
 
 	<script>
 		if ('serviceWorker' in navigator) {
