style: added a little svg to the holding page

--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -20,10 +20,13 @@
 
 {% block content %}
   <main id="main-content" tabindex="-1">
-    <div class="sf-flow">
-      <h1 class="[ text-max leading-tight ]">Walks.</h1>
-      <p class="text-500">The personal walking blog of a less than regular walker. Coming soon.</p>
-      <p class="text-500">This project will be replacing <a href="https://jatalieheights.co.uk/">Jatalie Heights</a>, my current walking blog. Feel free to have a look through the walks currently on there in the meantime.</a>
+    <div>
+      <svg width="60" height="60" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><defs><style>.cls2 {fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:1.15px}</style></defs><path class="cls2" d="M40.52 28.4l-2.55 2.66-3.5-2.72-2.72 2.72-3.26-3.2M10.7 43.69l11.25-18.57 3.88 6.56"></path><path class="cls2" d="M18.9 43.69l15.44-25.48 15.45 25.48M25.83 43.69H6.29M52.94 43.69H29.77"></path></svg>
+      <div class="sf-flow">
+        <h1 class="[ text-max leading-tight ]">Walks.</h1>
+        <p class="text-500">The personal walking blog of a less than regular walker. Coming soon.</p>
+        <p class="text-500">This project will be replacing <a href="https://jatalieheights.co.uk/">Jatalie Heights</a>, my current walking blog. Feel free to have a look through the walks currently on there in the meantime.</a>
+      </div>
     </div>
     {# {% include "partials/components/intro.njk" %}
     {% include "partials/components/article-list.njk" %}
