style: minor padding tweak

--- a/src/scss/views/_holding.scss
+++ b/src/scss/views/_holding.scss
@@ -17,7 +17,8 @@ main {
     }
 
     > div {
-        padding-inline: 1em;
+        padding-left: 1em;
+        padding-right: 1em;
         max-width: 685px;
     }
 }
