style: post note background color tweak
Now meets AA a11y standards

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -147,7 +147,7 @@
         }
 
         .post-note {
-            background-color: var(--color-theme-primary);
+            background-color: #195e9b;
             border-radius: 10px;
             color: var(--color-light);
             padding: var(--flow-space);
