--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="color-scheme" content="dark light">
 
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}/feed.xml" />
 
@@ -13,17 +14,25 @@
 	<link rel="apple-touch-icon" href="/images/favicons/apple-touch-icon.png">
 	<link rel="manifest" href="/images/favicons/manifest.json">
 
-	<link rel="preload" as="font" type="font/woff2" href="/fonts/sutro/sutro-med.woff2" crossorigin/> 
-	<link rel="preload" as="font" type="font/woff2" href="/fonts/sutro/sutro-bold.woff2" crossorigin/>
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/skolar-sans/skolar-sans-regular.woff2" crossorigin/>
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/skolar-sans/skolar-sans-semi.woff2" crossorigin/>
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/skolar-sans/skolar-sans-bold.woff2" crossorigin/>
+	<link rel="preload" as="font" type="font/woff2" href="/fonts/sutro/sutro-med.woff2" crossorigin/>
+	<link rel="preload" as="font" type="font/woff2" href="/fonts/sutro/sutro-bold.woff2" crossorigin/>
 
 	{% include "partials/global/meta-info.njk" %}
 	<style>{% include "assets/css/global.css" %}</style>
 
 	{% block head %}
 	{% endblock %}
+
+	{# Feels a bit hacky, but prevents the dreaded flash of incorrect theme #}
+	<script>
+		if(localStorage.getItem('user-color-scheme') !== null) {
+			const theme = localStorage.getItem('user-color-scheme');
+			document.documentElement.dataset.userColorScheme = theme;
+		}
+  </script>
 </head>
 {# TODO a nicer way of doing this light nav #}
 <body class="{% if page.url == '/project/isveggiemanhere/' %}light-nav{% endif %}">
@@ -33,6 +42,8 @@
 	{% include "partials/global/site-foot.njk" %}
 	{% block foot %}
 	{% endblock %}
+
+	<script type="module" src="/js/components/light-dark-toggle.js" async="" defer="defer"></script>
 
 	<script>
 		if ('serviceWorker' in navigator) {
