--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -1,7 +1,8 @@
 .intro {
-    background-color: #f0f4fb;
-    color: var(--color-dark);
-    margin-bottom: 1.5rem;
+    background-color: var(--color-intro-bg);
+    color: var(--color-text);
+	margin-bottom: 1.5rem;
+	transition: background-color 300ms ease-in-out 0s, color 300ms ease-in-out 0s;
 
     &__heading {
         @include apply-utility('font', 'heading');
@@ -41,7 +42,7 @@
     }
 
     &__meta {
-        color: var(--color-dark);
+        color: var(--color-text);
 
         span {
             font-style: italic;
