--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -26,7 +26,7 @@
         }
 
         a {
-            color: var(--color-dark);
+            color: var(--color-text);
             font-size: get-size(500);
             font-weight: 600;
 
