--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -2,6 +2,10 @@
 
 // Pull in the stalfos lib
 @import '../../node_modules/stalfos/stalfos.scss';
+
+// Mixins
+@import 'mixins/dark-mode';
+
 @import 'theme';
 
 // Local dependencies
@@ -12,8 +16,9 @@
  */
 
 html {
-    background-color: var(--color-grey-light);
-    position: relative;
+    background-color: var(--color-bg);
+	position: relative;
+	transition: background-color .3s ease-in-out 0s;
 
     &:before,
     &:after {
@@ -34,7 +39,13 @@ html {
     &:after {
         right: 0;
         top: 20%;
-    }
+	}
+
+	&[data-user-color-scheme='dark'] {
+		img {
+			opacity: .75;
+		}
+	}
 }
 
 body {
@@ -116,6 +127,7 @@ a:not([class]) {
 @import 'components/about';
 @import 'components/heading-permalink';
 @import 'components/intro';
+@import 'components/light-dark-toggle';
 @import 'components/nav';
 @import 'components/pagination';
 @import 'components/people';
