--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -190,6 +190,24 @@
 
         // post__body--resume
         &--resume {
+			h2,
+			h3,
+			h4 {
+				align-items: center;
+				display: flex;
+				flex-wrap: wrap;
+
+				img {
+					border: 2px solid var(--color-text);
+					border-radius: 50%;
+					height: 40px;
+					margin-left: 10px;
+					margin-right: 10px;
+					min-width: 40px;
+					width: 40px;
+				}
+			}
+
             h2 {
                 border-bottom: 1px solid var(--color-grey-med);
                 margin-bottom: 40px;
